@@ -1,5 +1,5 @@
 //
-//  IReadable.cs
+//  ZincAnnotation.cs
 //
 //  Author:
 //       Willem Van Onsem <vanonsem.willem@gmail.com>
@@ -19,15 +19,11 @@
 //  You should have received a copy of the GNU General Public License
 //  along with this program.  If not, see <http://www.gnu.org/licenses/>.
 using System;
-using System.IO;
 
 namespace ZincOxide.MiniZinc {
-
-    public interface IReadable {
-
-        void Read (StreamReader sr);
-
+    public class ZincAnnotation {
+        public ZincAnnotation () {
+        }
     }
-
 }
 
