@@ -1,5 +1,5 @@
 //
-//  IReadable.cs
+//  ZincSolveType.cs
 //
 //  Author:
 //       Willem Van Onsem <vanonsem.willem@gmail.com>
@@ -19,14 +19,13 @@
 //  You should have received a copy of the GNU General Public License
 //  along with this program.  If not, see <http://www.gnu.org/licenses/>.
 using System;
-using System.IO;
 
-namespace ZincOxide.MiniZinc {
+namespace Parsing {
 
-    public interface IReadable {
-
-        void Read (StreamReader sr);
-
+    public enum ZincSolveType : byte {
+        Satisfy     = 0x00,
+        Minimize    = 0x01,
+        Maximize    = 0x02
     }
 
 }
