@@ -1,6 +1,14 @@
 2013-09-18  Willem Van Onsem  <vanonsem.willem@gmail.com>
 
 	* ZincModel.cs:
+	* ZincSolveType.cs:
+	* ZincAnnotation.cs:
+	* ZincVarDeclItem.cs:
+	* ZincIncludeItem.cs: 
+
+2013-09-18  Willem Van Onsem  <vanonsem.willem@gmail.com>
+
+	* ZincModel.cs:
 	* IZincItem.cs:
 	* ZincIncludeItem.cs:
 	* ZincVarDeclItem.cs:
